--- a/product.css
+++ b/product.css
@@ -2,6 +2,11 @@ body {
   font-family: 'Circular', sans-serif !important;
 }
 
+@font-face {
+  font-family: 'Circular';
+  src: url("lineto-circular-book.otf") format("opentype");
+}
+
 .container {
   max-width: 960px;
 }
